# homelab

./: README.md  main.py  pyproject.toml
homelab/: __init__.py  common.py
homelab/routers/: __init__.py
homelab/routers/api/mullvad/: router.py
homelab/static/css/: base.style.css
homelab/templates/: home.jinja
